--- a/TODO.txt
+++ b/TODO.txt
@@ -19,17 +19,36 @@
     X Add a button to synchronise time offset based on server's UTC time
     X Add interface with time when crawling starts, and "status" (can be waiting, requesting, submiting)
 
-  * - Work on interface, adding iFrame for manual submit and initial log browser
-    - Add browser-calculated time to crawl initiation
-    - Test manual interface on Marco's form
 
   *
-    - Rewrite request scheduler with configurable times and logger
-
-  * - Add message logger
+    X Change form so that it works on browser's local time
+    X Work on interface, adding iFrame for manual submit and initial log browser
+    X Test manual interface on Marco's form
 
   *
-    - Test scheduler, decide what to do with cookies etc.
+    X Only set fields that are empty
+    X Add buttons to iframe interface: "force reload", "stop refreshing", "close"
+    X Make interface collapse when sending requests
+    X Make it less "bliky" (overlay, or two frames)
+    X Enable/disable buttons depending on the automaton's state
+    X Have indicator of reload counts
+    X Display code at the top of the frame
+    X Fix frame height so that iframe is as big as it needs to be
+    X Check for ways to see if just "body" has loaded
+
+  * 
+    X Ability to log from client side
+    X Ability to see logs
+
+  *
+    X Fix "time offset" procedure
+    X Make logs downloadable as text files
+
+  *
+    - Rewrite server-side request scheduler
+
+  *
+    - Testing
 
   *
     - Write form server with several forms (straight, JS, cookies, in-field coockies, etc.)
@@ -59,10 +78,6 @@
   * Have "Tell us about you" screen when creating workspace, place contact editing in UserConfig
     In UserConfig, add option to have a default country code for SMSes and contact data entry
 
-  ***
-    Add a "category" for a user, think of easiest way to implement what's now possible with Entertainers. "Groups"?
-    This will require a "tick" widget where the list will depend on the available groups, cross-matching
-
   "CONTACTS -- SEARCH"
 
   **
@@ -70,6 +85,7 @@
 
   ***
     Write "contact lookup" field form that auto-completes contacts (make it configurable)
+    Use the same widget for selecting groups/categories for a user
 
   -----------------------
   DEADLINE: 15 May 2014
