--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@
   "CONTACTS AND USERS AND SETTINGS -- BASIC FEATURES"
 
   * Change how I develop, start using some kind of GUI, this is becoming silly
-    Really. Not good.
+    Really. Not good. At all.
 
   *
     Put the "name" back at the top of the app, taken from the contact, and check that it changes when changed
