--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,13 @@
   
   "CONTACTS AND USERS (LINKED)"
   
-  
-  * Fix issue with linkedUserId, needs to be an external table or any save will kill it, just like isStarred
-
   *
+    Make isStarred a generic class in JsonRestStores 
+    Make sure linkedUserId is properly protexted and it all works (no longer gets overwritten)  
     Make any contact form update itself based on linkedUserId being there (contact category will disappear)
-    Make "contact type" not appear for companies 
     
   *
+    Improve way in which "Tell us about us" handles an email address being there, no error message
     Have a select box for email address in user config, taken from contacts' email addresses
     When adding an email address, if it's the first one, set it as default in userConfig
 
@@ -18,7 +17,7 @@
     In contact list, make sure contacts are not DnD-able (meaningless)
     Add permissions so that a user cannot chance a linked contact unless it's their own (or it's God)    
 
-  *   
+  **   
     Write functionality so that "delete" actually sets a flag (probably in simpleDbLayer)
     Check for "default filters" active for a specific store, write pattern for it
     Check what happens when you delete the selected email address in a contact, must stay selected 
@@ -53,10 +52,6 @@ DEADLINE: 30 MAY 2014
   *******
     Write "contact lookup" field form that auto-completes contacts (make it configurable)
     Use the same widget for selecting groups/categories for a user, or maybe create a "tick" widget
-
-DEADLINE: 30 MAY 2014
-
-  "HOUSE KEEPING"
 
   * Write function to workout _children for a whole store in simpleDbLayer
 
@@ -875,5 +870,7 @@ DEADLINE: 30 MAY 2014
   * Have small 2px space for tabs, make email address a select from contacts' email addresses
   * Fix problem where after workspace creation config options do not include _children
   * Show a "tell us about you" and jump to userConfig (or embed widget in dialog box?) for new workspaces
-  * Make sure "tell us about you" stays on till a name and an email address is entered
-  
+  * Make sure "tell us about you" stays on till a name and an email address is entered  
+  * Redesign SimpleDbLayer/JsonRestStores so that they allow one-field stores implement isStarred with new way
+  * Make "contact type" not appear for companies 
+    
